# the_od_bods

./: .gitignore  Dockerfile  LICENSE  ODSCategories.json  README.md  aberdeenshire_council_scraper.py  arcgis.py  argyll_and_bute.csv  ckan.py  ckan_output.csv  crofting_commission.py  csvProcessor.py  custom_licences.py  dataset.md  dcat.py  east_ayrshire_scraper.py  error_log.md  export2jkan.py  from_Google_Sheets.csv  header.csv  jsonProcessor.py  jsonRow.py  local_authorities_list.csv  log.json  log.md  main.py  main.sh  merge_data.py  merged_output.csv  moray_council_scraper.py  nls_scraper.py  processor.py  pyproject.toml  render.py  render_problems.org  renfrew.csv  requirements.txt  run.sh  scottish_parliament.py  shetland_council.py  (+11 more)
.devcontainer/: devcontainer.json
CKANOpenDataImport/: CKANOpenDataImport.csproj  CKANOpenDataImport.sln  Program.cs  ckan_output.csv  ckan_output_test.csv  urls.json  urls.txt
SPARQL-ScotGov-import/: a-walkthrough-of-the-steps-taken.html
_datasets/: Abbey-Cropped-.md  Aberdeen City Council - Aberdeen City Council Contracts Register.md  Aberdeen City Council - Aberdeen City Rolls of Honour.md  Aberdeen City Council - Academy School Catchments.md  Aberdeen City Council - Air Quality - Diffusion Tubes.md  Aberdeen City Council - Bill Gibb Archive.md  Aberdeen City Council - Cemeteries and Burial Grounds.md  Aberdeen City Council - Community Councils 2013.md  Aberdeen City Council - Community Councils 2018.md  Aberdeen City Council - Election Results - General Elections.md  Aberdeen City Council - George Washington Wilson Archive.md  (+2580 more)
(+152 files in other folders)
