[project]
name = "open-data-scotland-backend"
version = "1.0.0"
description = "Open Data Scotland scrapers and data pipeline"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "datefinder>=0.7.3",
    "loguru>=0.7.0",
    "Markdown>=3.4.3",
    "numpy>=1.24.3",
    "pandas>=2.0.2",
    "python-dateutil>=2.8.2",
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "tenacity>=8.2.2",
    "validators>=0.20.0",
]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "ipykernel>=6.23.1",
    "ipython>=8.14.0",
    "pytest>=7.3.1",
    "pytest-base-url>=2.0.0",
    "pytest-html>=3.2.0",
    "pytest-metadata>=3.0.0",
    "pytest-selenium>=4.0.1",
    "pytest-variables>=3.0.0",
    "selenium>=4.9.1",
]
